# Gibic_Cpap_FW

./: .gitignore  CMakeLists.txt  README.md  changelog.md  heaptrace-gdbinit  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/bldc/: bldc_servo.c  bldc_servo.h
main/common/: common.c  common.h
main/control/: contorl.old  control.c  control.h  control2.c  filter.c  filter.h  humidificador.c  humidificador.h  lut.c  lut.h
main/i2c/: i2c_app.c  i2c_app.h
main/i2c/i2c_drv/: ads1015.c  ds1338.c  i2c_common.h  sdp810.c
main/mqtt/: mqtt.c  mqtt.h
main/proc/: fResp.c  fResp.h
main/uSD/: usdApp.c  usdApp.h  usdDrv.c  usdDrv.h
main/uart/: uartapp.c  uartapp.h
main/wifi/: upload_script.html  wifiDrv.c  wifiDrv.h  wifiserver.c  wifiserver.h
