idf_component_register(SRCS "main.c" 
                            "control/control.c"
                            "control/control2.c"
                            "control/filter.c"
                            "control/lut.c"
                            "control/humidificador.c"
                            "uSD/usdDrv.c" 
                            "uSD/usdApp.c" 
                            "wifi/wifiDrv.c"
                            "wifi/wifiserver.c"
                            "mqtt/mqtt.c"
                            "i2c/i2c_drv/ads1015.c"
                            "i2c/i2c_drv/ds1338.c"
                            "i2c/i2c_drv/sdp810.c"
                            "i2c/i2c_app.c"
                            "bldc/bldc_servo.c"
                            "uart/uartapp.c"
                            "common/common.c"
                            "proc/fResp.c"
                        INCLUDE_DIRS "."
                        EMBED_FILES "wifi/favicon.ico" "wifi/upload_script.html")   